examples/bad/fun-same-arg-names.oo
void misc_params(int ctr, string ctr, bool cond) {
    while (ctr > 0 && cond) {
        print(msg);
        ctr--;
    }
    return;
}
